--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </svg>
             </h1>
             <div class="toggle">
-                <p id="lightenText" class="toggle-text">lighten</p>
+                <p id="lightenText" class="toggle-text">light</p>
                 <div id="toggleBtn" class="toggle-btn">
                     <div class="inner-circle"></div>
                 </div>
-                <p id="darkenText" class="toggle-text unselected">darken</p>
+                <p id="darkenText" class="toggle-text unselected">dark</p>
             </div>
         </div>
     </nav>
