--- a/index.html
+++ b/index.html
@@ -5,195 +5,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chart</title>
-    <link rel="icon" href="asset/img/web-logo2.png">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="css/calendar.css">
-    <link rel="stylesheet" href="css/clock.css">
-    <link rel="stylesheet" href="css/footer.css">
-    <link rel="stylesheet" href="css/toggle.css">
-    <link rel="stylesheet" href="css/color.css">
-    <!-- 字体引入 -->
-    <link href="https://fonts.font.im/css?family=Noto+Sans" rel="stylesheet">
-    <!-- iconfont -  -->
-    <script src="https://at.alicdn.com/t/font_2523255_scm7dd2wljd.js"></script>
-    <style type="text/css">
-        .icon {
-            width: 1em; height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-    </style>
+    <title>上海你好海洋科技大学</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
-<body class="color-white" id="bd">
-    <nav id="nav">
-        <div class="nav-box">
-            <h1 id="title">Marine Data
-                <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-icodata1"></use>
+<body>
+    <nav>
+        <div class="logo"><a href="#"><img src="./asset/img/logo.jpg" alt="llogo" height="24px" width="24px" /></a>
+        </div>
+        <div><a href="#">首页</a></div>
+        <div><a href="#">公司简介</a></div>
+        <div><a href="#">职能部门</a></div>
+        <div><a href="#">企业文化</a></div>
+        <div><a href="#">合作与交流</a></div>
+        <div><a href="#">数据交互平台</a></div>
+        <div class="search">
+            <a href="#">
+                <svg t="1622636681765" class="icon" viewBox="0 0 1024 1024" version="1.1"
+                    xmlns="http://www.w3.org/2000/svg" p-id="2392" width="22" height="22">
+                    <path
+                        d="M400.696889 801.393778A400.668444 400.668444 0 1 1 400.696889 0a400.668444 400.668444 0 0 1 0 801.393778z m0-89.031111a311.637333 311.637333 0 1 0 0-623.331556 311.637333 311.637333 0 0 0 0 623.331556z"
+                        fill="#3885f6" p-id="2393"></path>
+                    <path d="M667.904 601.998222l314.766222 314.823111-62.919111 62.976-314.823111-314.823111z"
+                        fill="#3885f6" p-id="2394"></path>
                 </svg>
-            </h1>
-            <div class="toggle">
-                <p id="lightenText" class="toggle-text">light</p>
-                <div id="toggleBtn" class="toggle-btn">
-                    <div class="inner-circle"></div>
-                </div>
-                <p id="darkenText" class="toggle-text unselected">dark</p>
-            </div>
+            </a>
         </div>
     </nav>
-    <hr class="hr-top" />
-    <section class="chart rtData">
-        <h2>实时数据
-            <svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-shishishuju"></use>
-            </svg>
-        </h2>
-        <div class="box">
-            <div id="echart-line" style="width: 400px;height:400px"></div>
-            <div id="echart-normal" style="width: 400px;height:400px;"></div>
-            <div class="calendar" id="calendar">
-                <div class="title">
-                    <div class="month color-wl" id="month">MONTH</div>
-                    <div class="year" id="year">2021</div>
-                    <a href="#" class="a-left color-zt" id="prev">《</a>
-                    <a href="#" class="a-right color-zt" id="next">》</a>
-                </div>
-                <div class="bd">
-                    <div class="day">
-                        <ul type="none">
-                            <li>Sun</li>
-                            <li>Mon</li>
-                            <li>Tue</li>
-                            <li>Wed</li>
-                            <li>Thu</li>
-                            <li>Fri</li>
-                            <li>Sat</li>
-                        </ul>
-                    </div>
-                    <div class="date">
-                        <ul id="day-ul" type="none"></ul>
-                    </div>
-                </div>
-                <script src="js/calendar.js"></script>
-            </div>
+    <div class="main-box">
+        <div class="img1">
+            <img src="./asset/img/index2.jpg" alt="index1" id="back" />
         </div>
-        <div class="box">
-            <div id="air-temperature" style="width: 400px;height:400px"></div>
-            <div id="echart-nightingale" style="width: 400px;height:400px"></div>
+        <div class="index">
+            <a href="./main.html" class="btn"> 进入 > </a>
         </div>
-    </section>
-    <section class="chart stData">
-        <h2>统计数据
-            <svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-tongjishuju"></use>
-            </svg>
-        </h2>
-        <div class="box">
-            <div id="echart-all" style="width: 700px;height:500px;"></div>
-        </div>
-        <div class="box">
-            <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
-            <div id="echart-data" style="width: 700px;height:500px;"></div>
-            <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
-        </div>
-        <div class="box">
-            <div id="echart-lr" style="width: 700px;height:500px"></div>
-        </div>
-        <div class="box">
-            <div class="clock-box" id="clock">
-                <div class="clock">
-                    <div class="hour">
-                        <div class="hr" id="hr"></div>
-                    </div>
-                    <div class="minute">
-                        <div class="mu" id="mn"></div>
-                    </div>
-                    <div class="second">
-                        <div class="sc" id="sc"></div>
-                    </div>
-                </div>
-            </div>
-            <script src="js/clock.js"></script>
-        </div>
-        <div class="box bottom-box">
-            <div id="echart-timeData" style="width: 700px;height:540px;"></div>
-        </div>
-    </section>
-    <hr class="hr-bottom" />
-    <div class="emoji">
-        <img src="./asset/img/celebrate.webp" alt="ang">
+
     </div>
-    <footer class="trademark" id="trademark">
-        <p>
-            <span>友情链接:</span>
-            <!-- <span><a href="http://chartjs.cn/">chart.js</a></span> -->
-            <span>
-                <a href="./html/main.html" target="_blank">
-                    <!-- 子页面 -->
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-fengsu"></use>
-                    </svg>
-                </a>
-            </span>
-            <span><a href="https://echarts.apache.org/zh/index.html" target="_blank"><svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-echarts"></use>
-            </svg></a></span>
-            <!-- <span><a href="https://www.highcharts.com">highcharts</a></span> -->
-            <!-- <span><a href="">d3</a></span> -->
-            <span>
-                <a href="http://42.193.131.94/#/">
-                    <!-- 42.193.131.94 -->
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-vue"></use>
-                    </svg>
-                </a>
-            </span>
-        </p>
-        <p>
-            <span>
-                <a href="./asset/test/colorSelect/index.html" target="_blank">
-                    <!-- 颜色选择器 -->
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-quseqi"></use>
-                    </svg>
-                </a>
-            </span>
-            <span>
-                <a href="./sub/card/index.html" target="_blank">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-card"></use>
-                    </svg>
-                </a>
-            </span>
-            <span>
-                <a href="./sub/content/index.html" target="_blank">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-zhengwen"></use>
-                    </svg>
-                </a>
-            </span>
-        </p>
-        <p><small>© 2021 Kart Jim, Inc.</small></p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
-    <script src="js/echarts.js"></script>
-    <script src="js/echart2.js"></script>
-    <script src="js/echart-line.js"></script>
-    <script src="js/echart-lr.js"></script>
-    <script src="js/echart4.js"></script>
-    <script src="js/echart-temp.js"></script>
-    <script src="js/echart-all.js"></script>
-
-    <script src="js/echart5.js"></script>
-
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-    <script src="js/chart.js"></script>
-
-    <script src="js/toggle.js"></script>
 </body>
 
 </html>
