--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav>
-        <div class="logo"><a href="#"><img src="./asset/img/logo.jpg" alt="llogo" height="24px" width="24px" /></a>
+        <div class="logo"><a href="#"><img src="./asset/img/logo.jpg" alt="llogo" height="26px" width="26px" /></a>
         </div>
         <div><a href="#">首页</a></div>
         <div><a href="#">公司简介</a></div>
@@ -22,7 +22,7 @@
         <div class="search">
             <a href="#">
                 <svg t="1622636681765" class="icon" viewBox="0 0 1024 1024" version="1.1"
-                    xmlns="http://www.w3.org/2000/svg" p-id="2392" width="22" height="22">
+                    xmlns="http://www.w3.org/2000/svg" p-id="2392" width="24" height="24">
                     <path
                         d="M400.696889 801.393778A400.668444 400.668444 0 1 1 400.696889 0a400.668444 400.668444 0 0 1 0 801.393778z m0-89.031111a311.637333 311.637333 0 1 0 0-623.331556 311.637333 311.637333 0 0 0 0 623.331556z"
                         fill="#3885f6" p-id="2393"></path>
@@ -34,7 +34,7 @@
     </nav>
     <div class="main-box">
         <div class="img1">
-            <img src="./asset/img/index2.jpg" alt="index1" id="back" />
+            <img src="./asset/img/index4.png" alt="indeximg" id="back" />
         </div>
         <div class="index">
             <a href="./main.html" class="btn"> 进入 > </a>
