--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <nav>
-        <div class="logo"><a href="#"><img src="./asset/img/logo.jpg" alt="llogo" height="26px" width="26px" /></a>
+        <div class="logo"><a href="./index.html"><img src="./asset/img/logo.jpg" alt="llogo" height="26px" width="26px" /></a>
         </div>
-        <div><a href="#">首页</a></div>
+        <div><a href="./main.html">首页</a></div>
         <div><a href="#">公司简介</a></div>
         <div><a href="#">职能部门</a></div>
         <div><a href="#">企业文化</a></div>
@@ -34,7 +34,7 @@
     </nav>
     <div class="main-box">
         <div class="img1">
-            <img src="./asset/img/index4.png" alt="indeximg" id="back" />
+            <img src="./asset/img/index6.jpg" alt="indeximg" id="back" />
         </div>
         <div class="index">
             <a href="./main.html" class="btn"> 进入 > </a>
