--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
     <title>marine data</title>
     <link rel="icon" href="asset/img/web-logo2.png">
     <link rel="stylesheet" href="index.css">
+    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" rel="stylesheet"> -->
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> -->
     <link rel="stylesheet" href="css/calendar.css">
     <link rel="stylesheet" href="css/clock.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -19,7 +21,8 @@
     <script src="https://at.alicdn.com/t/font_2523255_scm7dd2wljd.js"></script>
     <style type="text/css">
         .icon {
-            width: 1em; height: 1em;
+            width: 1em;
+            height: 1em;
             vertical-align: -0.15em;
             fill: currentColor;
             overflow: hidden;
@@ -138,9 +141,10 @@
                     </svg>
                 </a>
             </span>
-            <span><a href="https://echarts.apache.org/zh/index.html" target="_blank"><svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-echarts"></use>
-            </svg></a></span>
+            <span><a href="https://echarts.apache.org/zh/index.html" target="_blank"><svg class="icon"
+                        aria-hidden="true">
+                        <use xlink:href="#icon-echarts"></use>
+                    </svg></a></span>
             <!-- <span><a href="https://www.highcharts.com">highcharts</a></span> -->
             <!-- <span><a href="">d3</a></span> -->
             <span>
@@ -179,6 +183,8 @@
         <p><small>© 2021 Kart Jim, Inc.</small></p>
     </footer>
 
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
+    <!-- <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
     <script src="js/echarts.js"></script>
     <script src="js/echart2.js"></script>
@@ -187,13 +193,13 @@
     <script src="js/echart4.js"></script>
     <script src="js/echart-temp.js"></script>
     <script src="js/echart-all.js"></script>
-
     <script src="js/echart5.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"></script>
-    <script src="js/chart.js"></script>
-
     <script src="js/toggle.js"></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
+
+    <!-- https://www.glyphicons.com/ -->
 </body>
 
 </html>
