--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>上海你好海洋科技大学</title>
     <link rel="stylesheet" href="css/index.css">
+    
 </head>
 
 <body>
@@ -39,8 +40,17 @@
         <div class="index">
             <a href="./main.html" class="btn"> 进入 > </a>
         </div>
-
     </div>
+
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
+     -->
+
+
 </body>
 
 </html>
