--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <title>marine data</title>
     <link rel="icon" href="asset/img/web-logo2.png">
     <link rel="stylesheet" href="index.css">
-    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> -->
-    <link rel="stylesheet" href="css/calendar.css">
-    <link rel="stylesheet" href="css/clock.css">
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/toggle.css">
     <link rel="stylesheet" href="css/color.css">
@@ -57,31 +53,6 @@
         <div class="box">
             <div id="echart-line" style="width: 400px;height:400px"></div>
             <div id="echart-normal" style="width: 400px;height:400px;"></div>
-            <div class="calendar" id="calendar">
-                <div class="title">
-                    <div class="month color-wl" id="month">MONTH</div>
-                    <div class="year" id="year">2021</div>
-                    <a href="#" class="a-left color-zt" id="prev">《</a>
-                    <a href="#" class="a-right color-zt" id="next">》</a>
-                </div>
-                <div class="bd">
-                    <div class="day">
-                        <ul type="none">
-                            <li>Sun</li>
-                            <li>Mon</li>
-                            <li>Tue</li>
-                            <li>Wed</li>
-                            <li>Thu</li>
-                            <li>Fri</li>
-                            <li>Sat</li>
-                        </ul>
-                    </div>
-                    <div class="date">
-                        <ul id="day-ul" type="none"></ul>
-                    </div>
-                </div>
-                <script src="js/calendar.js"></script>
-            </div>
         </div>
         <div class="box">
             <div id="air-temperature" style="width: 400px;height:400px"></div>
@@ -90,45 +61,16 @@
     </section>
     <section class="chart stData" id="stData">
         <h2>统计数据
-            <svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-tongjishuju"></use>
-            </svg>
+            <svg class="icon" aria-hidden="true"><use xlink:href="#icon-tongjishuju"></use></svg>
         </h2>
         <div class="box">
             <div id="echart-all" style="width: 700px;height:500px;"></div>
         </div>
         <div class="box">
-            <!-- <div><canvas id="chart-bar" width="400" height="400"></canvas></div> -->
             <div id="echart-data" style="width: 700px;height:500px;"></div>
-            <!-- <div><canvas id="chart-line" width="400" height="400"></canvas></div> -->
-        </div>
-        <div class="box">
-            <div id="echart-lr" style="width: 700px;height:500px"></div>
-        </div>
-        <div class="box">
-            <div class="clock-box" id="clock">
-                <div class="clock">
-                    <div class="hour">
-                        <div class="hr" id="hr"></div>
-                    </div>
-                    <div class="minute">
-                        <div class="mu" id="mn"></div>
-                    </div>
-                    <div class="second">
-                        <div class="sc" id="sc"></div>
-                    </div>
-                </div>
-            </div>
-            <script src="js/clock.js"></script>
-        </div>
-        <div class="box bottom-box">
-            <div id="echart-timeData" style="width: 700px;height:540px;"></div>
         </div>
     </section>
     <hr class="hr-bottom" />
-    <div class="emoji">
-        <img src="./asset/img/celebrate.webp" alt="ang">
-    </div>
     <footer class="trademark" id="trademark">
         <p>
             <span>友情链接:</span>
@@ -155,27 +97,10 @@
                     </svg>
                 </a>
             </span>
-        </p>
-        <p>
-            <span>
-                <a href="./asset/test/colorSelect/index.html" target="_blank">
-                    <!-- 颜色选择器 -->
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-quseqi"></use>
-                    </svg>
-                </a>
-            </span>
             <span>
                 <a href="./sub/card/index.html" target="_blank">
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-card"></use>
-                    </svg>
-                </a>
-            </span>
-            <span>
-                <a href="./sub/content/index.html" target="_blank">
-                    <svg class="icon" aria-hidden="true">
-                        <use xlink:href="#icon-zhengwen"></use>
                     </svg>
                 </a>
             </span>
@@ -185,16 +110,10 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
-    <script src="js/echarts.js"></script>
-    <script src="js/echart2.js"></script>
-    <script src="js/echart-line.js"></script>
-    <script src="js/echart-lr.js"></script>
-    <script src="js/echart4.js"></script>
-    <script src="js/echart-temp.js"></script>
-    <script src="js/echart-all.js"></script>
-    <script src="js/echart5.js"></script>
+    <script src="./asset/js/echart.js"></script>
+    <script src="./asset/js/echart2.js"></script>
 
-    <script src="js/toggle.js"></script>
+    <script src="./asset/js/toggle.js"></script>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>-->
 
